# pii-redactor-starter

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/: FUNDING.yml
examples/: sample_texts.csv
src/pii_redactor/: __init__.py  cli.py  redactor.py
tests/: test_cli.py  test_redactor.py
